--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,17 @@ dependencies:
   supabase_flutter: ^2.8.0
   country_picker: ^2.0.26
   intl_phone_field: ^3.2.0
+  cached_network_image: ^3.3.1
+  image_picker: ^0.8.7+5
+  flutter_dotenv: ^5.0.2
+  form_field_validator: ^1.1.0
+  flutter_spinkit: ^5.1.0
+  validators: ^3.0.0
+  flutter_secure_storage: ^8.0.0
+  email_validator: ^2.0.1
+  connectivity_plus: ^4.0.1
+  uuid: ^4.3.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
