--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - lib/assets/templates/template_siswa.xlsx
+    - lib/assets/templates/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
