--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   path_provider: ^2.1.4
   share_plus: ^10.0.0
   path: ^1.9.0
+  image_cropper: ^8.0.2
+  flutter_image_compress: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
